Closed Bug 1266285 Opened 8 years ago Closed 8 years ago

Cubeb list exposed in getUserMedia device list includes unplugged devices and doesn't show correct default

Categories

(Core :: WebRTC: Audio/Video, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla48
Tracking Status
firefox48 --- fixed

People

(Reporter: jesup, Assigned: jesup)

Details

Attachments

(1 file)

Don't include UNPLUGGED cubeb devices in input list, and use correct default device.
Attachment #8743648 - Flags: review?(kinetik)
Rank: 10
Priority: -- → P1
Attachment #8743648 - Flags: review?(kinetik) → review+
Note: previously on Windows bluetooth devices that had ever associated with the machine were showing up, and also the default device was always the first enabled one.
https://hg.mozilla.org/mozilla-central/rev/bb544df79501
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: