Bug 1266285: Don't include UNPLUGGED cubeb devices in getUserMedia list, and use correct default r=kinetik

MozReview-Commit-ID: 1hBNLCAu2rW